<resources>
    <string name="app_name">航空发动机孔探辅助工具</string>
    <string name="Select_engine_model">发动机型号及部件选择</string>
    <string name="Engine_model">型 号：</string>
    <string name="Engine_parts">部 件：</string>
    <string name="Engine_stages">级 数：</string>
    <string name="Next_step">确定</string>
    <string name="Todo">TODO</string>
    <string name="is_turn_on">查看绑定设备</string>
    <string name="turn_on">一键连接</string>
    <string name="turn_off">关闭蓝牙</string>
    <string name="find_device">查找设备</string>
    <string name="finddevice">查找设备</string>
    <string name="ControlForwardRotation">正转</string>
    <string name="ControlSuspendRotation">暂停</string>
    <string name="ControlContinueRotation">继续</string>
    <string name="N2_Index">定位</string>
    <string name="ControlStop">终止</string>
    <string name="ControlReverseRotation">反转</string>
    <string name="textCalibration">校准：</string>
    <string name="ControlIncrease">加速</string>
    <string name="ControlReduce">减速</string>
    <string name="TextSpeedTitle">速度：</string>
    <string name="ControlInching">点动</string>
    <string name="ControlReverseInching">反向点动</string>
    <string name="Sign">标记</string>
    <string name="RotationSpeed">0</string>
    <string name="engine_text">CFM56_7B</string>
    <string name="part_text">高压压气机</string>
    <string name="stage_text">第一级</string>
    <string name="blade_number_text">1</string>
    <string name="dataID_text">1</string>
   />
</resources>