<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context="com.example.Drive_system.Engine_Drive_Activity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 聊天对话框 -->


    <Button
        android:id="@+id/StartTurning"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/ControlForwardRotation"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline39"
        app:layout_constraintVertical_bias="0.5" />

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline39" app:layout_constraintStart_toStartOf="@+id/guideline17" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline23" android:text="@string/ControlReverseRotation" android:id="@+id/ButtonReverseRotation"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline32" app:layout_constraintStart_toStartOf="@+id/guideline17" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline33" android:text="@string/ControlIncrease" android:id="@+id/ButtonIncrease"/>

    <TextView android:layout_height="200dp" android:layout_width="307dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline20" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline21" android:id="@+id/information_window" android:layout_above="@+id/bt_send"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline34" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline16" app:layout_constraintBottom_toTopOf="@+id/guideline35" android:text="@string/ControlSuspendRotation" android:id="@+id/SuspendTurning"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline34" app:layout_constraintStart_toStartOf="@+id/guideline17" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline35" android:text="@string/ControlContinueRotation" android:id="@+id/KeepTurning"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline33" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline16" app:layout_constraintBottom_toTopOf="@+id/guideline34" android:text="@string/N2_Index" android:id="@+id/DeviceInit" android:layout_marginTop="8dp"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline32" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/setSpeed" app:layout_constraintBottom_toTopOf="@+id/guideline33" android:text="@string/ControlReduce" android:id="@+id/ButtonReduce" android:layout_marginTop="8dp"/>

    <TextView android:layout_height="33dp" android:layout_width="89dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline21" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline39" android:text="@string/TextSpeedTitle" android:id="@+id/textSpeedTitle" android:textSize="16sp" android:textColor="#000000"/>

    <TextView android:layout_height="31dp" android:layout_width="238dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline21" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline39" android:text="0" android:id="@+id/textSpeedDisplay" android:textSize="16sp" app:layout_constraintStart_toEndOf="@+id/textSpeedTitle"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline23" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline16" app:layout_constraintBottom_toTopOf="@+id/guideline32" android:text="@string/ControlInching" android:id="@+id/buttonInching"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline23" app:layout_constraintStart_toStartOf="@+id/guideline17" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline32" android:text="@string/ControlReverseInching" android:id="@+id/buttonReverseInching"/>

    <Button android:layout_height="70dp" android:layout_width="120dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline33" app:layout_constraintStart_toStartOf="@+id/guideline17" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline34" android:text="@string/Sign" android:id="@+id/buttonSign" android:layout_marginTop="12dp"/>

    <Button android:layout_height="57dp" android:layout_width="86dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline32" app:layout_constraintStart_toStartOf="@+id/guideline16" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/guideline17" app:layout_constraintBottom_toTopOf="@+id/guideline33" android:text="速度输入" android:id="@+id/setSpeed"/>

    <TextView android:layout_height="37dp" android:layout_width="100dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline19" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/guideline18" app:layout_constraintBottom_toTopOf="@+id/guideline20" android:text="正在检查：" android:id="@+id/textStateTitle" android:textSize="16sp" android:textColor="#000000"/>

    <TextView android:layout_height="37dp" android:layout_width="221dp" app:layout_constraintVertical_bias="0.5" app:layout_constraintTop_toTopOf="@+id/guideline19" app:layout_constraintStart_toStartOf="@+id/guideline15" app:layout_constraintHorizontal_bias="0.574" app:layout_constraintEnd_toStartOf="@+id/guideline27" app:layout_constraintBottom_toTopOf="@+id/guideline20" android:text=" " android:id="@+id/textStateDisplay" android:textSize="16sp" android:textColor="#000000"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline15" app:layout_constraintGuide_percent="0.02" android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline27" app:layout_constraintGuide_percent="0.98" android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline16" app:layout_constraintGuide_percent="0.4" android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline17" app:layout_constraintGuide_percent="0.6" android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline18" app:layout_constraintGuide_percent="1.0" android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline19" app:layout_constraintGuide_percent="0.0" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline20" app:layout_constraintGuide_percent="0.07" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline21" app:layout_constraintGuide_percent="0.37" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline23" app:layout_constraintGuide_percent="0.6" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline32" app:layout_constraintGuide_percent="0.7" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline33" app:layout_constraintGuide_percent="0.8" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline34" app:layout_constraintGuide_percent="0.9" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline35" app:layout_constraintGuide_percent="1.0" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline39" app:layout_constraintGuide_percent="0.5" android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/guideline41" app:layout_constraintGuide_percent="0.5" android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>