<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.example.Drive_system.BluetoothActivity">


    <Button
        android:id="@+id/turn_on_blue_tooth"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:onClick="turn_on_Bluetooth"
        android:text="@string/turn_on"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/turn_off_blue_tooth"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="turn_off_Bluetooth"
        android:text="@string/turn_off"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/check_BoundDevices"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/find_device"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="find_device"
        android:text="@string/finddevice"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/check_BoundDevices"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/check_BoundDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoundDevices"
        android:text="@string/is_turn_on"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ListView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="144dp"
        android:divider="#e90423"
        android:dividerHeight="1px"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        tools:layout_editor_absoluteX="0dp">

    </ListView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <!-- 聊天对话框 -->
    <TextView
        android:id="@+id/chat_content"
        android:layout_width="389dp"
        android:layout_height="200dp"
        android:layout_above="@+id/bt_send"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />


</androidx.constraintlayout.widget.ConstraintLayout>